--- a/check.html
+++ b/check.html
@@ -28,8 +28,8 @@
         <div class="sidebar-header">
           <span>License</span>
         </div>
-        <a href="/" class="nav-link"> <i class="fas fa-home"></i> Home </a>
-        <a href="/checking" class="nav-link">
+        <a href="/boykisser" class="nav-link"> <i class="fas fa-home"></i> Home </a>
+        <a href=/boykisser/check" class="nav-link">
           <i class="far fa-comment"></i> Check
         </a>
       </div>
