--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             Swal.fire({
   title: "<strong>License <u>generated</u></strong>",
   icon: "info",
-  html: `<img src="https://boykisser-license.onrender.com/get?key=${key.value}">;`,
+  html: `<img src="https://boykisser-license.onrender.com/get?key=${key.value}">`,
 });
           
       }
