--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <div class="">
+    <div class="flex">
       <div class="sidebar h-full min-h-full">
         <div class="sidebar-header">
           <span>License</span>
