--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="flex">
-      <div class="sidebar h-full min-h-full">
+      <div class="flex sidebar" style="align-items: stretch;">
         <div class="sidebar-header">
           <span>License</span>
         </div>
