--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <div class="flex">
+    <div class="flex" style="height: 100vh; min-height: 100vh;">
       <div class="sidebar" style="align-items: stretch;">
         <div class="sidebar-header">
           <span>License</span>
