--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
      <div class="content w-full h-screen bg-gray-800 overflow-auto flex align-center justify-center">
-      <div class="bg-gray-950 m-auto p-3"><h1 class="text-white text-xl">Whoops!</h1>
-        <h1 class="text-white text-lg">Looks like this website has retired!</h1></div>
+      <div class="bg-gray-950 m-auto p-8 text-center rounded-lg"><h1 class="text-white text-xl">Whoops!</h1>
+        <h1 class="text-white text-lg">Looks like this website has retired!</h1>
+        <h1 class="text-white text-lg">Access the new website <a href="https://boykisser-next-js.vercel.app/">here</a>.</h1>
+      
+      </div>
     </div>
   </body>
 </html>
