--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <div class="bg-gray-950 m-auto p-8 text-center rounded-lg"><h1 class="text-white text-xl">Whoops!</h1>
         <h1 class="text-white text-lg">Looks like this website has retired!</h1>
         <h1 class="text-white text-lg">Access the new website <a href="https://boykisser-next-js.vercel.app/">here</a>.</h1>
+       
+      <div class="flex-grow border-b border-gray-800 mb-2 mt-2"></div>
+        <h1 class="text-white">Powered by Github & Hiro(caffwydev)</h1>
       
       </div>
     </div>
